--- a/react-app/src/assets/styles.css
+++ b/react-app/src/assets/styles.css
@@ -19,3 +19,19 @@
 .formControl{
     margin: 14px 0px 14px 0px;
 }
+
+.width75{
+    width:75%
+}
+
+.width25{
+    width:25%
+}
+
+.left {
+    float: left
+}
+
+.right {
+    float: right
+}
